| Summary: | ASTERISK-25254: Crash if dialplan sets ATTENDEDTRANSFER to an empty string before Park. | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2015-07-15 17:54:54 | Date Closed: | 2015-07-16 20:33:53 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_parking |
| Versions: | 13.4.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Asterisk crashes If you call the following dialplan exten:
{noformat} exten = 100,1,NoOp() same = n,Set(ATTENDEDTRANSFER=) ;same = n,Set(BLINDTRANSFER=) same = n,Park() same = n,Hangup() {noformat} Backtrace {noformat} #1 0x012044e0 in setup_park_common_datastore (parkee=0xb738d6b4, parker_uuid=0xb738d758 "1436906324.126", comeback_override=0xb7322568 "park-ringback,101,1", randomize=0, time_limit=90, silence_announce=0) at parking/parking_applications.c:353 353 parker_dial_string = ast_strdupa(S_OR(attended_transfer, blind_transfer)); (gdb) p attended_transfer $1 = 0xb7394b21 "" (gdb) p blind_transfer $2 = 0x0 (gdb) {noformat} However, if you uncomment the BLINDTRANSFER line then it won't crash. | ||
| Comments: | |||